# pagerduty-client-rs

./: Cargo.toml  README.md  release.toml
.github/workflows/: rust.yml
examples/: oncall.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: escalation_policies.rs  lib.rs  oncalls.rs  result.rs  schedules.rs  services.rs  tags.rs  teams.rs  users.rs  webhooks.rs
src/models/: company.rs  escalation_policy.rs  mod.rs  oncall.rs  reference.rs  schedule.rs  service.rs  tag.rs  team.rs  user.rs  webhook.rs
