[package]
name = "pagerduty-client"
version = "0.1.1-alpha.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/madninja/pagerduty-client-rs"
readme = "README.md"
description = "An async library for the PagerDuty REST API"
authors = ["Marc Nijdam <marc@helium.com>"]

[features]
default = []

[dependencies]
pagerduty-macros = {path = "macros"}
reqwest = {version = "0.11", default-features=false, features = ["gzip", "json", "rustls-tls"]}
futures = "0.3"
thiserror = "1"
serde =  {version = "1", features=["derive"]}
serde_json = "1"
http-serde = "1"
chrono = {version = "0.4", features = ["serde"]}
chrono-tz = {version = "0.7", features = ["serde"]}
http = "0.2"
dotenv = "0.15"
async-trait = "0.1"

[dev-dependencies]
tokio = {version = "1", features = ["full"]}

